@@ -1,3 +1,8 @@
+2008-04-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/36017
+	* gcc.dg/pr36017.c: New test.
+
 2008-04-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/35747
